syntax = "proto3";

package rng; 

// FIX: Change the Go package suffix to 'main'
option go_package = "github.com/ShadyDevelopment/ECHOBETZ/services/rng-service;main";

service RNGService {
    rpc GetNumbers (RNGRequest) returns (RNGResponse) {}
}

message RNGRequest {
    int32 count = 1;
    int32 min = 2;
    int32 max = 3;
}

message RNGResponse {
    repeated int32 numbers = 1;
    int64 seed = 2; // Return the seed used for auditing
}